# rs-state-machine

./: Cargo.toml  README.md  README.zh_CN.md
src/: lib.rs  state_cell.rs  state_machine.rs  state_machine_build_error.rs  state_machine_builder.rs  state_machine_error.rs  transition.rs
src/fast/: fast_state_machine.rs  fast_state_machine_build_error.rs  fast_state_machine_builder.rs  fast_state_machine_error.rs  mod.rs
src/standard/: mod.rs  state_machine.rs  state_machine_build_error.rs  state_machine_builder.rs  state_machine_error.rs
tests/: mod.rs  state_machine_build_error_tests.rs  state_machine_error_tests.rs
tests/fast/: fast_state_machine_build_error_tests.rs  fast_state_machine_builder_tests.rs  fast_state_machine_error_tests.rs  fast_state_machine_tests.rs  mod.rs
tests/standard/: mod.rs  state_machine_build_error_tests.rs  state_machine_builder_tests.rs  state_machine_error_tests.rs  state_machine_tests.rs  transition_tests.rs
tests/state_cell/: state_cell_tests.rs
tests/state_machine/: mod.rs  state_machine_tests.rs
tests/state_machine_builder/: mod.rs  state_machine_builder_tests.rs
tests/transition/: mod.rs  transition_tests.rs
