[package]
name = "qubit-state-machine"
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-state-machine"
description = "A small, thread-safe finite state machine for Rust"
homepage = "https://github.com/qubit-ltd/rs-state-machine"
documentation = "https://docs.rs/qubit-state-machine"
readme = "README.md"
keywords = ["state-machine", "fsm", "workflow", "thread-safe", "qubit"]
categories = ["data-structures", "concurrency"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_state_machine"
doctest = true

[dependencies]
qubit-atomic = "0.10"
qubit-cas = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
