[package]
name = "qubit-state-machine"
version = "0.4.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-state-machine"
description = "A small, thread-safe finite state machine for Rust"
homepage = "https://github.com/qubit-ltd/rs-state-machine"
documentation = "https://docs.rs/qubit-state-machine"
readme = "README.md"
keywords = ["state-machine", "fsm", "workflow", "thread-safe", "qubit"]
categories = ["data-structures", "concurrency"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_state_machine"
doctest = true

[dependencies]
thiserror = "2.0"

qubit-atomic = "0.13"
qubit-cas = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
